# Veloseller-

./: .env.example  .gitignore  README.md  TODO.md  docker-compose.yml  package-lock.json  package.json
apps/worker/: .env.example  Dockerfile  pyproject.toml  requirements.txt
apps/worker/app/: config.py  cost_import_api.py  crypto.py  db.py  holidays.py  ingest_persist.py  logger.py  main.py  notifications.py  recalc_lock.py  schemas.py  task_queues.py  telegram.py  telegram_link.py
apps/worker/app/diagnostics/: __init__.py  ozon_stocks_inspect.py
apps/worker/app/engine/: alerts.py  changelog.py  confidence.py  coverage.py  events.py  health.py  (+8 more)
apps/worker/tests/: conftest.py  test_alert_race.py  test_alert_realert_cooldown.py  test_alert_staleness.py  test_changelog.py  test_cost_import.py  test_crypto.py  test_crypto_edge.py  test_db_helpers.py  test_db_retry.py  test_engine.py  test_expire_subscriptions.py  test_feed.py  test_formulas_spec.py  test_google_sheet.py  test_holidays.py  test_logger.py  test_lost_revenue_in_aggregates.py  test_main_bg_sync.py  test_main_endpoints.py  test_main_persist.py  test_main_sync_lock.py  test_monthly_report_period.py  test_notifications.py  test_ozon_kind_filter.py  test_period_metrics_parity.py  test_period_window.py  test_pipeline_edge.py  test_radar.py  test_recalc_advanced.py  test_recalc_batched.py  test_recalc_concurrency.py  test_recalc_e2e.py  test_recalc_helpers.py  test_recalc_lock.py  test_recalc_log_failed.py  test_recalc_store_metrics_inactive.py  test_recount.py  test_reports.py  test_reports_frequency.py  (+9 more)
(+464 files in other folders)
