[project]
name = "veloseller-worker"
version = "0.1.0"
description = "Veloseller расчётный движок: TVelo, confidence, health"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
    "supabase>=2.9.0",
    "python-multipart>=0.0.12",
    "gspread>=6.0.0",
    "google-auth>=2.35.0",
    "apscheduler>=3.10.4",
    "pytz>=2024.2",
    "cryptography>=43.0.0",
    "resend>=2.0.0",
    "reportlab>=4.2.0",
    # XML/XLSX парсинг источников (feed.py / csv_upload.py). Раньше были только в
    # requirements.txt → `pip install -e ".[dev]"` по README их НЕ ставил.
    "defusedxml>=0.7.1",
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "pytest-asyncio>=0.24.0", "pytest-cov>=5.0.0", "ruff>=0.7.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
